<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mentalCalculation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="select_grade">年级选择</string>
	<string name="first_grade">一年级</string>
	<string name="second_grade">二年级</string>
	<string name="third_grade">三年级</string>
	<string name="four_grade">四年级</string>
	<string name="five_grade">五年级</string>
	<string name="six_grade">六年级</string>
	<string name="rapid_calculation">速算练习</string>
	<string name="grade_1_top_q1">1~5的认识和加减法</string>
	<string name="grade_1_top_q2">6~10的认识和加减法</string>
	<string name="grade_1_top_q3">11~20的认识和加减法</string>
	<string name="grade_1_top_q4">20以内的进位加法</string>
	<string name="grade_1_down_q1">20以内的退位减法</string>
	<string name="grade_1_down_q2">100以内数的认识</string>
	<string name="grade_1_down_q3">100以内数的加法和减法（一）</string>
	
	
	<string name="grade_2_top_q1">100以内数的加法和减法（二）</string>
	<string name="grade_2_top_q2">表内乘法（一）</string>
	<string name="grade_2_top_q3">表内乘法（二）</string>
	<string name="grade_2_down_q1">解决问题</string>
	<string name="grade_2_down_q2">表内除法（一）</string>
	<string name="grade_2_down_q3">表内除法（二）</string>
	<string name="grade_2_down_q4">万以内的加法和减法（一）</string>
	
	<string name="grade_3_top_q1">万以内的加法和减法（二）</string>
	<string name="grade_3_top_q2">四边形</string>
	<string name="grade_3_top_q3">有余数的除法</string>
	<string name="grade_3_top_q4">多位数乘一位数</string>
	<string name="grade_3_top_q5">分数的初步认识</string>
	<string name="grade_3_down_q1">除数是一位数的除法 </string>
	<string name="grade_3_down_q2">统计</string>
	<string name="grade_3_down_q3">两位数乘以两位数</string>
	<string name="grade_3_down_q4">小数的初步认识</string>
	<string name="grade_3_down_q5">解决问题</string>
	
	
	<string name="grade_4_top_q1">三位数乘以两位数</string>
	<string name="grade_4_top_q2">除数是两位数的除法</string>	
	<string name="grade_4_down_q1">四则运算 </string>
	<string name="grade_4_down_q2">运算定律和简便计算</string>
	
	
	<string name="grade_5_top_q1">小数乘法</string>
	<string name="grade_5_top_q2">小数除法</string>
	<string name="grade_5_top_q3">简易方程</string>
	<string name="grade_5_top_q4">多边形的面积</string>
	<string name="grade_5_down_q1">长方形和正方形</string>
	<string name="grade_5_down_q2">分数的意义和性质</string>
	<string name="grade_5_down_q3">分数的加法和减法</string>
	
	<string name="grade_6_top_q1">分数乘法</string>
	<string name="grade_6_top_q2">分数除法</string>
	<string name="grade_6_top_q3">圆</string>
	
	<string name="back">返回</string>
	<string name="top_grade">上册</string>
	<string name="bottom_grade">下册</string>
</resources>