<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_menu"
    android:layout_width="240dip"
    android:layout_height="wrap_content"
    android:background="@drawable/sidebar"
    android:orientation="vertical" >

    <TextView
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/grade_choose"
        android:gravity="center_vertical"
        android:paddingLeft="15.0dip" />

    <TextView
        android:id="@+id/first_grade"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:background="@drawable/choosing"
        android:drawablePadding="1.0dip"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:gravity="center"
        android:text="@string/first_grade"
        android:textColor="#000000"
        android:textSize="26.0sp" />


    <TextView
        android:id="@+id/second_grade"
         android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:gravity="center"
        android:text="@string/second_grade"
        android:textColor="#000000"
        android:textSize="26.0sp"/>



   <TextView
        android:id="@+id/third_grade"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:gravity="center"
        android:text="@string/third_grade"
        android:textColor="#000000"
        android:textSize="26.0sp"/>

    

 <TextView
      android:id="@+id/four_grade"
         android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:gravity="center"
        android:text="@string/four_grade"
        android:textColor="#000000"
        android:textSize="26.0sp"/>



   <TextView
        android:id="@+id/five_grade"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:gravity="center"
        android:text="@string/five_grade"
        android:textColor="#000000"
        android:textSize="26.0sp" />



    <TextView
        android:id="@+id/six_grade"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:drawablePadding="1.0dip"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:gravity="center"
        android:text="@string/six_grade"
        android:textColor="#000000"
        android:textSize="26.0sp" />

</LinearLayout>