<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:id="@+id/scroll1"

>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_1_textview1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_3_top_q1" 
        android:textColor="#FFA500"
        android:textSize="25dp"/>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_1_textview1" >

        <TextView
            android:id="@+id/grade_3_top_11"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rect_blue" 
            android:gravity="center"
            android:text="两位数加两位数的连续进位加法"
            android:textSize="25dp"/>
         

    </RelativeLayout>
	<TextView
        android:id="@+id/item_1_textview2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_3_top_q2" 
        android:layout_marginTop="40dp"
        android:textColor="#FFA500"
        android:textSize="25dp"/>
       
<RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       >

        <TextView
            android:id="@+id/grade_3_top_21"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rect_blue" 
            android:gravity="center"
            android:text="长方形的周长"
            android:textSize="25dp"/>
        
    </RelativeLayout>
    
   	<TextView
        android:id="@+id/item_1_textview3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_3_top_q3" 
        android:layout_marginTop="40dp"
        android:textColor="#FFA500"
        android:textSize="25dp"/>
       
	<RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       >

        <TextView
            android:id="@+id/grade_3_top_31"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rect_blue" 
            android:gravity="center"
            android:text="余数和除数的关系"
            android:textSize="25dp"/>
        
     </RelativeLayout>
     <TextView
        android:id="@+id/item_1_textview4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_3_top_q4" 
        android:layout_marginTop="40dp"
        android:textColor="#FFA500"
        android:textSize="25dp"/>
	 <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_1_textview4" >

        <TextView
            android:id="@+id/grade_3_top_41"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rect_blue" 
            android:gravity="center"
            android:text="两位数乘一位数（不进位）的笔算乘法"
            android:textSize="25dp"/>
         <TextView
            android:id="@+id/grade_3_top_42"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rect_pop"
            android:gravity="center"
            android:text="两、三位数乘一位数（不连续进位）的笔算乘法"
            android:textSize="25dp" />

         <TextView
             android:id="@+id/grade_3_top_43"
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/rect_org" 
             android:gravity="center"
             android:text="中间带0的三位数乘一位数"
            android:textSize="25dp"/>
           <TextView
            android:id="@+id/grade_3_top_44"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_below="@id/item_1_textview1"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="140dp"
            android:background="@drawable/rect_blue" 
            android:gravity="center"
            android:text="末尾带0的三位数乘一位数"
            android:textSize="25dp"/>

    </RelativeLayout>
    
	 
	  <TextView
        android:id="@+id/item_1_textview5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_3_top_q5" 
        android:layout_marginTop="40dp"
        android:textColor="#FFA500"
        android:textSize="25dp"/>
	 <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_1_textview4" >

        <TextView
            android:id="@+id/grade_3_top_51"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rect_blue" 
            android:gravity="center"
            android:text="同分母分数加法"
            android:textSize="25dp"/>
         <TextView
            android:id="@+id/grade_3_top_52"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rect_pop"
            android:gravity="center"
            android:text="同分母分数减法"
            android:textSize="25dp" />

         <TextView
             android:id="@+id/grade_3_top_53"
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/rect_org" 
             android:gravity="center"
             android:text="1减去几分之几"
            android:textSize="25dp"/>
          

    </RelativeLayout>
	  
</LinearLayout>
</ScrollView>