<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:id="@+id/scroll1"

>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_1_textview1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_6_top_q1" 
        android:textColor="#FFA500"
        android:textSize="18dp"/>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_1_textview1" >

        <TextView
            android:id="@+id/grade_6_top_11"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rect_blue" 
            android:gravity="center"
            android:text="分数乘整数的计算方法"
            android:textSize="18dp"/>
         <TextView
            android:id="@+id/grade_6_top_12"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rect_pop"
            android:gravity="center"
            android:text="分数乘分数的计算方法"
            android:textSize="18dp" />

         <TextView
             android:id="@+id/grade_6_top_13"
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/rect_org" 
             android:gravity="center"
             android:text="分数乘分数的简便算法"
            android:textSize="18dp"/>
           <TextView
            android:id="@+id/grade_6_top_14"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="140dp"
            android:background="@drawable/rect_blue" 
            android:gravity="center"
            android:text="连续求一个数的几分之几是多少的问题的解法"
            android:textSize="18dp"/>

    </RelativeLayout>
	<TextView
        android:id="@+id/item_1_textview2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_6_top_q2" 
        android:layout_marginTop="40dp"
        android:textColor="#FFA500"
        android:textSize="18dp"/>
       
<RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       >

        <TextView
            android:id="@+id/grade_6_top_21"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rect_blue" 
            android:gravity="center"
            android:text="分数除以整数的计算方法"
            android:textSize="18dp"/>
         <TextView
            android:id="@+id/grade_6_top_22"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rect_pop"
            android:gravity="center"
            android:text="一个数除以分数的计算方法"
            android:textSize="18dp" />

         <TextView
             android:id="@+id/grade_6_top_23"
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/rect_org" 
             android:gravity="center"
             android:text="求比中未知项的方法"
            android:textSize="18dp"/>
         
       
    </RelativeLayout>
    
   	<TextView
        android:id="@+id/item_1_textview3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_6_top_q3" 
        android:layout_marginTop="40dp"
        android:textColor="#FFA500"
        android:textSize="18dp"/>
       
	<RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       >

        <TextView
            android:id="@+id/grade_6_top_31"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rect_blue" 
            android:gravity="center"
            android:text="圆的周长计算公式"
            android:textSize="18dp"/>
         <TextView
            android:id="@+id/grade_6_top_32"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rect_pop"
            android:gravity="center"
            android:text="圆的面积计算公式的应用"
            android:textSize="18dp" />

      
        
        
     </RelativeLayout>
	  
</LinearLayout>
</ScrollView>